fixed issue of single line display
Issue-ID:ACUMOS-2135
Description: Complete Model Name is not displaying in single line on model
description screen

Issue-ID:ACUMOS-2374
Description: Long Model name cause distorted model description screen

--- a/acumos-portal-fe/src/main/webapp/css/styles.css
+++ b/acumos-portal-fe/src/main/webapp/css/styles.css
@@ -256,7 +256,12 @@ h6 {margin:0;padding:0}
 .sectiontitle9 {color: #671C9D;margin-bottom:0; border-bottom: none;}
 
 .sharetitle {font-weight: 600;font-size: 14px;line-height: 32px; padding: 5px 0 5px 8px; }
-.rate-title {padding-bottom:8px; position:relative; top:7px; word-break: break-all; white-space:nowrap; }
+.rate-title {padding-bottom:8px; position:relative; word-break: break-all; white-space:nowrap;overflow: hidden;
+text-overflow: ellipsis;max-width: 99%; }
+.md-rate-grid {display:flex; flex-direction: row;justify-content: space-between;flex-wrap: nowrap;border-bottom: 1px solid #b1b1b1;width: 100%;}
+.md-rate-grid > .rate-grid-cell1 {width: calc(100%);min-width: 150px;}
+.md-rate-grid > .rate-grid-cell2 {width: auto;min-width: 290px;}
+
 .txt-black1 {color: #000000;}
 .txt-black2 {color: #050009;}
 .txt-black3 {color: #2e2f2f;}
@@ -339,6 +344,8 @@ md-input-container.md-default-theme:not(.md-input-focused):not(.md-input-invalid
 .md-headline {max-width: 730px;}
 .md-headline2 {max-width: 280px;}
 .md-headline3 {text-overflow: initial; overflow: initial; max-width: 730px !important;}
+.md-headline4 {font-size: 20px;height:30px; max-width: 470px; font-weight: 600;line-height: 24px;letter-spacing: .02em;margin: 3px 0;padding: 0; color: #671C9D; text-overflow: ellipsis;  float: left; overflow: hidden;white-space: nowrap;}
+.md-headline5 {font-size: 20px;height:30px; max-width: 410px; font-weight: 600;line-height: 24px;letter-spacing: .02em;margin: 3px 0;padding: 0; color: #671C9D; text-overflow: ellipsis;  float: left; overflow: hidden;white-space: nowrap;}
 
 .txt-orange {color: #ff630a;}
 
